assets/stylesheets/redproject.css
/* ... */
.compact-table .check { 
	-webkit-transform:translate(0, 3em);
	   -moz-transform:translate(0, 3em);
	    -ms-transform:translate(0, 3em);
	     -o-transform:translate(0, 3em);
	        transform:translate(0, 3em);
}
*/

.single-element {
	padding-left: 10px;
	padding-right: 10px;
	margin-bottom: -1px;
	overflow: hidden;
	/* border-top: 1px dotted rgb(220,220,220); */
	border-top: 1px dotted transparent;
	border-bottom: 1px dotted transparent;
	cursor: default;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-flow: row wrap;
	flex-flow: row wrap;
    -webkit-flex: 1 100%;
	flex: 1 100%;
}

.single-element > * {
	flex: 1 100%;
}

.single-element:hover {
	background-color: rgb(250,250,250);
}

.pull-right-div {
	float: right;
	overflow: hidden;
	text-align: right;
}

.toast-info {
    background-color: #999;
}

.wrapper, .wrapper a { color: #999; }

.wrapper.priority-is6, .wrapper.priority-is6 a{
    color: #CC3A21;
    font-weight: 600;
}
.wrapper.priority-is4, .wrapper.priority-is4 a{
    color: #FFAA00;
    font-weight: 600;
}
.wrapper.priority-is6 a.subject, .wrapper.priority-is4 a.subject {color: black;}

.wrapper .issue_id {
	width: 4em;
	overflow: hidden;
	padding-right: 10px;
}

.wrapper .select {
	padding-right: 10px;
	padding-top: 0.26em;
	position: relative;
	display: none;
}

.wrapper .updated_at{
    min-width: 43px;
	text-align: right;
	color: #999999;
	font-weight: 300;
}

.wrapper .tracker {
	width: 2.5em;
	overflow: hidden;
	padding-right: 10px;
	margin-top: 3px;
}

.wrapper .tracker .textCircle {
	border-radius: 50%;
	width: 20px;
	height: 20px;
	/*padding: 2px;*/
	background: #fff;
	border: 1px solid #cccccc;
	/* color: #666; */
	text-align: center;
	overflow: hidden;
	line-height: 19px;
	font-size: 10px;
    font-weight: normal;
}

.wrapper.priority-is6 .tracker .textCircle { border: none;background-color: #CC3A21;color: #ffffff;} /* Priorité HAUTE */
.wrapper.priority-is4 .tracker .textCircle { border: none;background-color: #FFAA00;color: #ffffff;} /* NORMALE */
.wrapper.priority-is3 .tracker .textCircle { border: 1px solid #CCC;background-color: #ffffff;color: #999;} /* BASSE */
.wrapper.priority-is10 .tracker .textCircle { border: none;background-color: #ffffff;color: #999;} /* NON PRIORITAIRE */
/*
.wrapper .tracker .textCircle.tr-3 {	border: none;} /* Information
.wrapper .tracker .textCircle.tr-5 {	background-color: #555555;color: #ffffff;border: none;} /* Incident
.wrapper .tracker .textCircle.tr-7 {	background-color: #bbbbbb;color: #ffffff;border: none;} /* Probleme
.wrapper .tracker .textCircle.tr-8 {	background-color: #dddddd;color: #ffffff;border: none;} /* Qualification
*/

.wrapper .project {
	width: 12em;
	overflow: hidden;
	padding-right: 10px;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.wrapper .priority {
	padding-right: 10px;
}

.wrapper .aside-watched {
	padding-right: 10px;
	width: 24px;
	height: 30px;
}

.wrapper a:hover {
   text-decoration: none;
}

.wrapper {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row wrap;
	flex-flow: row wrap;
}

.wrapper > * {
    -webkit-flex: 1 100%;
	flex: 1 100%;
}

.main {
	text-align: left;
}

.aside {
    -webkit-flex: 0 0 auto;
    flex: 0 0 auto;
}

@media all and (max-width: 749px) {

    .actions-menu {
        padding-left: 0em;
    }
    .custom-dropdown-menu {
        width: calc(100vw - 10px);
    }

    .compact-table .single-element, .comfortable-table .single-element { height: auto; }
    .single-element{
        padding: 5px 0;
        border-bottom: 2px solid #F5F5F5;
    }
    .aside {
        -webkit-flex: 0 0 auto;
        flex: 0 0 auto;
    }
    .main{
        max-height: 60px;
        overflow: hidden;
    }
	.wrapper{
		line-height: 2.4em;
	}
    .wrapper .subject {
		 -webkit-order: 2;
		 order: 2;
		 -webkit-flex: 1;
		 flex: 1;
		 text-overflow: ellipsis;
		 white-space: nowrap;
	 }
	.issue-subject { font-size: 1.45em; }
    .wrapper .last-talk {
        -webkit-flex: 1 0 100%;
        flex: 1 0 100%;
        -webkit-order: 10;
        order: 10;
        margin-left: 2.5em;
        text-overflow: ellipsis;
        white-space: nowrap;
        line-height: 1.3;
		overflow: hidden;
    }
    .wrapper .note-count {
        -webkit-order: 23;
        order: 23;
        -webkit-flex: 0 0 auto;
        flex: 0 0 auto;
    }
    .wrapper .note-count .at-least-one {
        display: none;
    }
    .wrapper .note-count .zero {
        display: inline;
    }
    .aside-watched{
        -webkit-order: 24;
        order: 24;
        -webkit-flex: 0 0 auto;
        flex: 0 0 auto;
    }
    .aside.updated_at {
        /* display: none; */
        -webkit-order: 3;
        order: 3;
        -webkit-flex: 0 0 auto;
        flex: 0 0 auto;
    }
    .aside.tracker{
        -webkit-order: 1;
        order: 1;
        -webkit-flex: 0 0 auto;
        flex: 0 0 auto;
        margin-top: 7px;
    }
    .aside.issue_id{
        -webkit-order: 20;
        order: 20;
        margin-left: 2.5em;
    }
    .aside-priority {
        -webkit-order: 9;
        order: 9;
        padding-left: 5px;
    }
    .aside.project {
        -webkit-order: 21;
        order: 21;
        width: auto;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        -webkit-flex: 0 0 auto;
        flex: 0 0 auto;
    }
    .aside-assignation {
        -webkit-order: 22;
        order: 22;
    }
    #notifications {display: none;}
    .action-perm {display: none;}
}
/* ... */

